# novelsave

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Procfile  README.md  alembic.ini  docker-compose.yml  example.py  main.py  okteto-pipeline.yml  okteto.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py
.github/workflows/: codeql-analysis.yml  py-publish.yml  python-publish.yml
migrations/: command.py  commands.py  env.py
migrations/versions/: 04d6aae05bbc_init.py  67cc70f1d3e5_init.py  d137a4515bd9_initial.py  d3a1aa1ffa3d_initial.py  f37cec007123_init.py
novelsave/: __init__.py  __main__.py  containers.py  epub.py  exceptions.py  logger.py  meta.py  novelsave.py  save.py  scraper.py  settings.py  sourcesave.py  template.py  websave.py
novelsave/cli/: __init__.py  __main__.py  config.py  default.py  events.py  listing.py  main.py
novelsave/cli/controllers/: __init__.py  _compile.py  _novel.py  _package.py  _update.py  _url.py  novel.py  update.py
novelsave/cli/groups/: __init__.py  _compile.py  _config.py  _manage.py  _novel.py  _refresh.py  _update.py  _version.py  update.py
novelsave/cli/helpers/: __init__.py  novel.py  source.py
novelsave/client/cli/: __init__.py  main.py
novelsave/commandline/: listing.py
novelsave/concurrent/: __init__.py  action.py  atomic.py  controller.py  iothread.py  manager.py
novelsave/core/: __init__.py
novelsave/core/dtos/: __init__.py  chapter_dto.py  metadata_dto.py  novel_dto.py  volume_dto.py
novelsave/core/entities/: __init__.py  constants.py  model.py
novelsave/core/services/: __init__.py  base_file_service.py  base_meta_service.py  base_novel_service.py  base_path_service.py  base_save_service.py
novelsave/database/: __init__.py  __template__.py  base.py  file.py  template.py
novelsave/database/accessors/: __init__.py  chapters.py  info.py  interface.py  keyvalue.py  pending.py  volumes.py
novelsave/database/config/: __init__.py  base.py  element.py  user.py
novelsave/database/cookies/: cookie_database.py  exceptions.py
novelsave/database/tables/: __init__.py  __template__.py  decoupled.py  external.py  keyvalue.py  multi.py  sequence.py  set_sequence.py  single.py  template.py
novelsave/database/webnovel/: __init__.py  chapters.py  info.py  pending.py  volumes.py  webnovel.py
novelsave/exceptions/: __init__.py  cookies.py  misc.py  network.py  source.py
novelsave/infrastructure/: __init__.py  containers.py
novelsave/infrastructure/migrations/: commands.py  env.py
novelsave/metasources/: __init__.py  metasource.py  novelupdates.py  wlnupdates.py
novelsave/migrations/: README.md  __init__.py  commands.py  env.py
novelsave/migrations/versions/: e5c4fb5600ea_initial.py
novelsave/models/: __init__.py  chapter.py  metadata.py  novel.py
novelsave/models/source_models/: __init__.py  chapter.py  novel.py
novelsave/services/: __init__.py  file_service.py  meta_service.py  novel_service.py  path_service.py  save_service.py  source_service.py
novelsave/services/compilers/: __init__.py  compiler_provider.py  epub_compiler.py
novelsave/services/config/: __init__.py  config_service.py
novelsave/services/novel/: __init__.py  asset_service.py  novel_service.py
novelsave/services/packagers/: __init__.py  azw3_packager.py  calibre_packager.py  epub_packager.py  html_packager.py  mobi_packager.py  package_provider.py  pdf_packager.py  text_packager.py  web_packager.py
novelsave/services/source/: __init__.py  meta_source_gateway.py  source_gateway.py  source_gateway_provider.py  source_service.py
novelsave/services/tools/: __init__.py  calibre_service.py
novelsave/sources/: __init__.py  betwixtedbutterfly.py  boxnovel.py  chickengage.py  chrysagarden.py  crawler.py  dragontea.py  dummynovels.py  fanfiction.py  foxaholic.py  insanitycave.py  kieshitl.py  ktlchamber.py  lightnovelworld.py  mtlnovel.py  novelfull.py  novelonlinefull.py  novelpassion.py  novelsite.py  peachpitting.py  readlightnovel.py  royalroad.py  scribblehub.py  source.py  spacebattles.py  sufficientvelocity.py  wattpad.py  webnovel.py  wuxiaco.py  wuxiacom.py  wuxiaonline.py  wuxiaworldco.py
novelsave/sources/metadata/: __init__.py  metasource.py  novelupdates.py  wlnupdates.py
novelsave/sources/novel/: __init__.py  betwixtedbutterfly.py  boxnovel.py  chickengage.py  chrysagarden.py  (+31 more)
novelsave/tools/: __init__.py  string.py  ui.py
novelsave/ui/: __init__.py  builder.py  figlet.py  loader.py  prefix.py  printer.py  tools.py  waiter.py
novelsave/view_models/: chapter.py  metadata.py
temp/: epub.py  logger.py  meta.py  novelsave.py
temp/database/: base.py  template.py
test/: test_settings.py
test/database/: __init__.py  template_test.py
test/services/: test_file_service.py  test_novel_service.py  test_path_service.py  test_save_service.py  test_source_service.py
test/sources/: __init__.py  crawler_test.py
tests/: conftest.py
tests/services/: test_file_service.py  test_path_service.py
(+143 files in other folders)
