[tool.poetry]
name = "novelsave"
version = "0.7.7"
description = "This is a tool to download and convert novels from popular sites to e-books."
authors = ["Mensch272 <47662901+mensch272@users.noreply.github.com>"]
maintainers = ["Mensch272 <47662901+mensch272@users.noreply.github.com>"]
repository = "https://github.com/mensch272/novelsave"
license = "Apache-2.0"
readme = "README.md"
include = ["novelsave/static/*.*"]
keywords = ["novel", "lightnovel", "scraper", "epub", "mobi"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Games/Entertainment"
]

[tool.poetry.urls]
"Source Code" = "https://github.com/mensch272/novelsave"
"Issue Tracker" = "https://github.com/mensch272/novelsave/issues"
"Documentation" = "https://github.com/mensch272/novelsave/blob/master/README.md"

[tool.poetry.scripts]
novelsave = "novelsave.cli.main:main"

[tool.poetry.dependencies]
python = "^3.8"
appdirs = "^1.4.4"
requests = "^2.26.0"
EbookLib = "^0.17.1"
loguru = "^0.5.3"
SQLAlchemy = "^1.4.24"
dependency-injector = "^4.36.0"
alembic = "^1.7.3"
novelsave-sources = "^0.2.1"
click = "^8.0.1"
beautifulsoup4 = "^4.10.0"
lxml = "^4.6.3"
browser-cookie3 = "^0.12.1"
tqdm = "^4.62.3"
Mako = "^1.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
