# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html

[metadata]
name = novelsave
version = attr: novelsave.__version__
author = Mensch272
author_email = mhaisham79@gmail.com
description = This is a tool to download and convert novels from popular sites to e-books.
url = https://github.com/mensch272/novelsave
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0
license_file = LICENSE
platforms = any
keywords = webnovel novel lightnovel scraper download epub
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Intended Audience :: End Users/Desktop
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Games/Entertainment
project_urls =
    Source Code = https://github.com/mensch272/novelsave
    Issue Tracker = https://github.com/mensch272/novelsave/issues
    Documentation = https://github.com/mensch272/novelsave/blob/master/README.md

[options]
zip_safe = False
python_requires = >= 3.8
packages = find:
include_package_data = True

[options.package_data]
novelsave =
    static/*.*

[options.entry_points]
console_scripts =
    novelsave = novelsave.cli.main:main
